// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should handle change event with space and enter when focused: checked 1`] = `
<div>
  <label
    class="junipero toggle-field checked"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event with space and enter when focused: unChecked 1`] = `
<div>
  <label
    class="junipero toggle-field"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event with space and enter when focused: unchecked 1`] = `
<div>
  <label
    class="junipero toggle-field"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event: checked 1`] = `
<div>
  <label
    class="junipero toggle-field checked"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should handle change event: unChecked 1`] = `
<div>
  <label
    class="junipero toggle-field"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should not handle change if toggle is disabled: unChecked 1`] = `
<div>
  <label
    class="junipero toggle-field disabled"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should not handle change if toggle is disabled: unchecked 1`] = `
<div>
  <label
    class="junipero toggle-field disabled"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
      value="my_value"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should render 1`] = `
<div>
  <label
    class="junipero toggle-field"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should render with children 1`] = `
<div>
  <label
    class="junipero toggle-field"
    tabindex="1"
  >
    <input
      tabindex="-1"
      type="checkbox"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;

exports[`<Toggle /> should set disabled class if toggle is disabled 1`] = `
<div>
  <label
    class="junipero toggle-field disabled"
    tabindex="1"
  >
    <input
      disabled=""
      tabindex="-1"
      type="checkbox"
    />
    <div
      class="inner"
    >
      <div
        class="handle"
      />
    </div>
    <div
      class="label"
    >
      label
    </div>
  </label>
</div>
`;
